<resources>
    <string name="app_name">Mobile A</string>
    <string name="action_settings">Settings</string>
    <string name="app_version">v 1.0.0</string>
    <string name="app_build">build260616</string>
    <string name="app_developper">www.oltranz.com</string>
    <string name="copyright">Copyright © 2016 - All Rights Reserved.</string>
    <string name="terms"><a href="#">Terms and Conditions</a></string>
    <string name="owner">This Application is a product of Airtime Networks Ltd</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="txt_done">Done</string>
    <string name="txt_search">Search</string>

    <!-- Menus -->
    <string name="account">Home</string>
    <string name="transactionsHistory">Transactions History</string>
    <string name="notification">Notifications</string>
    <string name="help">Help</string>
    <string name="invite">Invite Friends</string>
    <string name="contactUs">Contact Us</string>
    <string name="about">About</string>
    <string name="offers">Our offers</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <!-- drawer open and close -->
    <string name="openDrawer">1</string>
    <string name="closeDrawer">0</string>
    <string name="invitationTitle">MobileA\n</string>
    <string name="invitationMessage">Hello!\n</string>
    <string name="downloadUrl">https://play.google.com/store/apps/details?id=com.oltranz.mobilea.mobilea</string>
    <string name="sendTo">Invite Friends…</string>
    <string name="title_activity_about">About</string>
    <string name="dialog_title">Notification…</string>
    <string name="confirm_title">Confirm…</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
</resources>
