<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:someNamespace="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/account"
            android:checked="false"
            android:icon="@drawable/ic_icon_menu_account"
            android:title="@string/account" />

        <item
            android:id="@+id/transactionsHistory"
            android:checked="false"
            android:icon="@drawable/ic_icon_menu_transactions"
            android:title="@string/transactionsHistory" />

        <item
            android:id="@+id/notifications"
            android:checked="false"
            someNamespace:showAsAction="always"
            android:icon="@drawable/ic_icon_menu_notifications"
            android:title="@string/notification"/>

        <item
            android:id="@+id/help"
            android:checked="false"
            android:icon="@drawable/ic_icon_menu_help"
            android:title="@string/help" />


        <item
            android:id="@+id/invite"
            android:checked="false"
            android:icon="@drawable/ic_icon_menu_share"
            android:title="@string/invite" />
        <item
            android:id="@+id/about"
            android:checked="false"
            android:icon="@drawable/ic_icon_menu_about"
            android:title="@string/about" />

        <item
            android:id="@+id/logout"
            android:checked="false"
            android:icon="@drawable/ic_icon_menu_logout"
            android:title="@string/logout" />

    </group>
</menu>