<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/airtime_logo"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:id="@+id/tabGroup"
        android:stretchColumns="*">
        <TableRow>
            <LinearLayout
                android:paddingLeft="0dip">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:gravity="right">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:text="App Name"
                        android:textColor="@color/appGray"/>
                </TableRow>
            </LinearLayout>


            <LinearLayout
                android:paddingLeft="0dip"
                android:gravity="center">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:inputType="phone"
                        android:gravity="left"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:text="@string/app_name"
                        android:textColor="@color/appBlue"
                        android:background="@color/appTransparent"/>
                </TableRow>
            </LinearLayout>
        </TableRow>

        <TableRow>
            <LinearLayout
                android:paddingLeft="0dip">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:gravity="right">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:text="App Version"
                        android:textColor="@color/appGray"/>
                </TableRow>
            </LinearLayout>


            <LinearLayout
                android:paddingLeft="0dip"
                android:gravity="center">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:inputType="phone"
                        android:gravity="left"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:text="@string/app_version"
                        android:textColor="@color/appBlue"
                        android:background="@color/appTransparent"/>
                </TableRow>
            </LinearLayout>
        </TableRow>

        <TableRow>
            <LinearLayout
                android:paddingLeft="0dip">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:gravity="right">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:text="App Build"
                        android:textColor="@color/appGray"/>
                </TableRow>
            </LinearLayout>


            <LinearLayout
                android:paddingLeft="0dip"
                android:gravity="center">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:inputType="phone"
                        android:gravity="left"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:text="@string/app_build"
                        android:textColor="@color/appBlue"
                        android:background="@color/appTransparent"/>
                </TableRow>
            </LinearLayout>
        </TableRow>

        <TableRow>
            <LinearLayout
                android:paddingLeft="0dip">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:gravity="right">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="right"
                        android:padding="10dp"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:text="Developer"
                        android:textColor="@color/appGray"/>
                </TableRow>
            </LinearLayout>


            <LinearLayout
                android:paddingLeft="0dip"
                android:gravity="center">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:inputType="phone"
                        android:gravity="left"
                        android:maxLength="20"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:text="@string/app_developper"
                        android:textColor="@color/appBlue"
                        android:background="@color/appTransparent"/>
                </TableRow>
            </LinearLayout>
        </TableRow>
    </TableLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/appBlue"
            android:text="@string/terms"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:textColor="@color/appGray"
            android:text="@string/copyright"/>
    </RelativeLayout>

</LinearLayout>